@@ -598,7 +598,11 @@ RC32:
   o fixed strange Oct display output in Bassline Sequence Editor
   o added "DEFAULT_ENABLE_UPPER_WAVEFORMS" switch to setup_* files to enable the
     selection of additional waveforms for SwinSID
-
+  o overworked Meter display mode in Bassline Mode (enjoy the effect! :)
+  o changed behaviour of Play button: now it plays all SIDs regardless if they
+    are selected or not.
+    Dedicated SIDs can be played by pressing & holding the appr. SID buttons
+    before pressing PLAY
 
 MEMO:
   - in Bassline mode, CCs could control individual knob parameters for
